--- a/estilos-css/estilos.css
+++ b/estilos-css/estilos.css
@@ -597,58 +597,13 @@ input textarea, textarea textarea {
   margin-bottom: 4px;
 }
 
-.escalaPrecio {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: 2px;
-  box-sizing: border-box;
-  margin-left: 2px;
-  text-align: center;
-}
-.escalaPrecio h3 {
-  margin-right: 10px;
-}
-.escalaPrecio .maxPrecio {
-  margin-right: 5px;
-  margin-top: 7px;
-  margin-bottom: 5px;
-}
-
-.nacionalidad {
-  margin-right: 5px;
-  display: flex;
-  box-sizing: border-box;
-  text-align: center;
-}
-
-.origen {
-  margin-top: 5px;
+#buscador {
+  margin: 5px;
+  width: 250px;
+  padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-right: 10px;
-}
-
-.originDivs {
-  font-size: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 10px;
-}
-
-.inputsBuy {
-  width: 10px;
-  text-align: left;
-}
-
-.escalaPrecio3 {
-  width: 80%;
-  box-sizing: border-box;
-  margin-left: 10%;
-  text-align: center;
 }
 
 .shoppingTodo {
@@ -860,8 +815,8 @@ input textarea, textarea textarea {
   grid-template-columns: 12rem 12rem 12rem;
   grid-template-rows: 50px auto 50px 50px;
   gap: 5px 5px;
-  margin-top: 20px;
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 205px;
   grid-auto-flow: row;
   grid-template-areas: "elementosSeleccionados canti prec" "producto cantidad precio" "metodoPago metodoPago metodoPago" "terminar-y-comprar terminar-y-comprar terminar-y-comprar";
 }
@@ -899,6 +854,13 @@ input textarea, textarea textarea {
   background-color: #219dd6;
   border-radius: 10px;
   text-align: center;
+  color: black;
+  /*     .emparejar{
+          background-color: green;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      } */
 }
 
 .precio {
@@ -925,9 +887,13 @@ input textarea, textarea textarea {
 
 .botonesCheckout {
   border-radius: 10px;
-  color: green;
-  background-color: black;
-  border: 3px solid #219dd6;
+  color: black;
+  font-weight: bold;
+  background-color: #d4c1c1;
+  align-self: center;
+  border: 0px;
+  padding: 0px 5px;
+  background-color: transparent;
 }
 
 /* 
