--- a/estilos-sass/estilos.scss
+++ b/estilos-sass/estilos.scss
@@ -591,7 +591,7 @@ input, textarea {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     label{
         margin-top: 10px;
@@ -602,7 +602,7 @@ input, textarea {
 
 #buscador{
     margin: 5px;
-    width: 250px;
+    width: 190px;
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -1068,31 +1068,6 @@ input, textarea {
         font-size: 95%;
     }
 }
-@media (max-width: 690px) {
-    .todosParametros{
-        height: 100px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin-bottom: 10px;
-
-        grid-template-rows: 50% 50% ;    
-        grid-auto-columns: 1fr;
-/*         gap: 5px 5px; */
-        grid-template-areas:
-        "escalaPrecio shoppingTodo"
-        "nacionalidad shoppingTodo";
-    }
-    .escalaPrecio { grid-area: escalaPrecio;
-        margin-left: 40px;
-    }
-    .nacionalidad { grid-area: nacionalidad;
-        margin-left: 40px;
-    }
-    .shoppingTodo { grid-area: shoppingTodo;
-        display: flex;
-        margin-left: 40%;
-    }
-}
 
 @media (max-width: 635px) {
     .product-rowy {
@@ -1111,15 +1086,7 @@ input, textarea {
             margin-top: 10px;
         }
     }
-    .todosParametros{
-        grid-template-columns: 60% 40%;
-        margin-bottom: 40px;
-        grid-template-rows: 50% 50% ;    
-        grid-auto-columns: 1fr;
-        grid-template-areas:
-        "escalaPrecio shoppingTodo"
-        "nacionalidad shoppingTodo";
-    }
+
 
     .escalaPrecio{ 
         font-size: 12px;
@@ -1132,7 +1099,7 @@ input, textarea {
         width: 100%;
     }
     .shoppingTodo { 
-        margin-left: 20%;
+        margin-left: 5%;
     }
     //los parametros deben ser mas verticales de 623px
 
@@ -1147,51 +1114,13 @@ input, textarea {
 }
 @media (max-width: 501px){
 
-    .todosParametros{    
-        grid-template-columns: 60% 40%; 
-        .escalaPrecio{ 
-            margin-left: 10px;
 
-         h3{
-            font-size: 14px;
-            margin: 2px 10px 00px 0px;
-        }
-    }
-    .nacionalidad {
-        margin-left: 10px;
-        margin-bottom: 20px;
-        height: 30px;
-        .originDivs{
-            margin-left: 25px;
-            margin-bottom: 20px;
-        }
-        .origen{
-            margin-right: 0px;
-            margin-top: 10px;
-            margin-bottom: 0px;
-            font-size: 14px;
-        }
-        .inputsNationals{
-            font-size: 14px;
-        }
-        .inputsBuy{
-            margin-top: 00px;
-            margin-bottom: 00px;
-        }
-    }
-        .shoppingTodo{
-            margin-left: 00px;
-            margin-bottom: 20px;
-        img{
-            width: 65%;
-        }
         .contadorUnidades{
             width: 30%;
             margin-left: 0px;
         }
-        }
-    }
-}
+            }
+
 
 @media (max-width: 480px) {
     .iconWeb {
