--- a/estilos-css/estilos.css
+++ b/estilos-css/estilos.css
@@ -589,7 +589,7 @@ input textarea, textarea textarea {
   border-radius: 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 .todosParametros label {
