--- a/estilos-sass/estilos.scss
+++ b/estilos-sass/estilos.scss
@@ -591,7 +591,7 @@ input, textarea {
     border-radius: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     label{
         margin-top: 10px;
