--- a/estilos-sass/estilos.scss
+++ b/estilos-sass/estilos.scss
@@ -808,7 +808,12 @@ input, textarea {
     margin-top: 00px;
     width: 80%;
     border-radius: 5px;
+    transition: all 0.6s;
 }
+.botonAdd:hover { 
+    transform: scale(1.05);
+}
+
 
 
 /* ----------------------TERMINA TIENDA -----------------*/
