--- a/estilos-css/estilos.css
+++ b/estilos-css/estilos.css
@@ -806,6 +806,11 @@ input textarea, textarea textarea {
   margin-top: 0px;
   width: 80%;
   border-radius: 5px;
+  transition: all 0.6s;
+}
+
+.botonAdd:hover {
+  transform: scale(1.05);
 }
 
 /* ----------------------TERMINA TIENDA -----------------*/
