--- a/estilos-sass/estilos.css
+++ b/estilos-sass/estilos.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,600&display=swap");
 body {
-  background: rgba(0, 0, 0, 0.92) url("../elements/elementos/images/vsts-y-wallpapers/wallpaper-ondas.jpg");
+  background: rgba(0, 0, 0, 0.92)
+    url("../elements/elementos/images/vsts-y-wallpapers/wallpaper-ondas.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -63,7 +64,8 @@ body {
     background-position: 88% 0%;
   }
 }
-.bg-darky, .prendeTitle {
+.bg-darky,
+.prendeTitle {
   background-color: black;
 }
 
@@ -281,7 +283,9 @@ body {
   margin-bottom: 15px;
 }
 .product-rowy .data-1Text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .product-rowy .data-1Tit {
   font-size: 1.5rem;
@@ -505,7 +509,8 @@ form {
   margin-top: 10px;
 }
 
-input, textarea {
+input,
+textarea {
   margin-top: 10px;
   width: 100%;
   margin-bottom: 20px;
@@ -517,7 +522,8 @@ input, textarea {
   font-weight: bold;
   background-color: black;
 }
-input textarea, textarea textarea {
+input textarea,
+textarea textarea {
   min-height: 100px;
   max-height: 200px;
   max-width: 100%;
@@ -609,10 +615,10 @@ input textarea, textarea textarea {
   align-items: center;
   width: 80%;
   /*     .shoppingCart{
-           margin-left: 50px;
-          margin-right: 50px;
-          margin-top: 15px; 
-      } */
+         margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 15px; 
+    } */
 }
 
 .contadorUnidades {
@@ -848,11 +854,11 @@ input textarea, textarea textarea {
   text-align: center;
   color: black;
   /*     .emparejar{
-          background-color: green;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-      } */
+        background-color: green;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } */
 }
 
 .precio {
@@ -1148,13 +1154,13 @@ input textarea, textarea textarea {
 }
 
 .logIg {
-  color: #DD2A7B;
+  color: #dd2a7b;
 }
 
 .logLnk {
-  color: #0077B5;
+  color: #0077b5;
 }
 
 .logFb {
   color: #395592;
-}/*# sourceMappingURL=estilos.css.map */
+} /*# sourceMappingURL=estilos.css.map */
